updated docs/ROADMAP.md to reflect Steps 8 and 9 completion, and documented the icon/branding setup